# template_viewer

./: CMakeLists.txt  LICENSE  README.md
shaders/: basic.frag  basic.vert
src/: ShaderProgram.cpp  ShaderProgram.h  main.cpp
